# y2-devops-lab

./: .gitignore  README.md
ServiceCatalog/: boto3_example.py
ansible/: instance.md
aws/ServiceCatalog/: boto3_example.py
aws/automation/: Test_Execute_Multi_AutoDoc.yaml  Test_Execute_Single_AutoDoc.yaml  Test_Select_AutoDoc.yaml  awsBranch.md  executeMultiAutomation.yaml  syntax.md
aws/ec2/: cloud_init.sh  init_linux.sh  modifyAMIAttribute.py
aws/efs/: mount.sh
aws/s3/: cli.sh
codingTest/Starter/: day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
iac_proj/: README.md
iac_proj/terraform/: README.md  provider.tf
iac_proj/terraform_backend/: backend.tf
project/ansible/: README.md
project/terragrunt/: terragrunt.hcl
script/: userdata.ps1  userdata.sh
script/network/: server.py
script/securityRisk/: terminal_timeout.sh
shell_test/: config_systemctl.sh
template/Git/: utils.py
template/SSM/: cf_ec2.json  role-dr-account-auto.json  role-dr-account-cf.json  role-dr-manage-auto.json  role-dr-target-auto.json
template/ansible/: ansible.cfg  ansible.sh  (+2 more)
template/develop/python_proj/: README.md  pyproject.toml
template/develop/python_proj/src/y2lib/: __init__.py  main.py  psqlDbConnection.py
terraform/: README.md  provider_template.tf
terragrunt/: child_terragrunt.hcl  parent_terragrunt.hcl  provider.hcl  root_terragrunt.hcl  terragrunt_ template.hcl
(+572 files in other folders)
